// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components ISelect props options should render correctly without options 1`] = `
<div class="select-wrapper -primary -md" id="select" name="select" role="combobox" aria-haspopup="listbox" aria-owns="select-options" aria-expanded="false">
  <div class="input-wrapper -primary -md -suffixed">
    <!--v-if-->
    <div class="input">
      <!--v-if--><input autocomplete="off" aria-autocomplete="both" aria-controls="select-options" placeholder="" name="select-input" type="text" tabindex="0" aria-disabled="false" readonly="" aria-readonly="true"><span class="input-suffix"><!--v-if--><button class="select-caret" aria-hidden="true"></button></span>
    </div>
    <!--v-if-->
  </div>
  <transition-stub>
    <div class="select" id="select-options" role="listbox" aria-hidden="true" style="display: none;"><span data-popper-arrow=""></span>
      <!--v-if-->
      <div class="select-body">
        <div class="select-no-results"> There are no results for your query. </div>
        <div class="select-options"></div>
      </div>
      <!--v-if-->
    </div>
  </transition-stub>
</div>
`;

exports[`Components ISelect should render correctly 1`] = `
<div class="select-wrapper -primary -md" id="select" name="select" role="combobox" aria-haspopup="listbox" aria-owns="select-options" aria-expanded="false">
  <div class="input-wrapper -primary -md -suffixed">
    <!--v-if-->
    <div class="input">
      <!--v-if--><input autocomplete="off" aria-autocomplete="both" aria-controls="select-options" placeholder="Option 1" name="select-input" type="text" tabindex="0" aria-disabled="false" readonly="" aria-readonly="true"><span class="input-suffix"><!--v-if--><button class="select-caret" aria-hidden="true"></button></span>
    </div>
    <!--v-if-->
  </div>
  <transition-stub>
    <div class="select" id="select-options" role="listbox" aria-hidden="true" style="display: none;"><span data-popper-arrow=""></span>
      <!--v-if-->
      <div class="select-body">
        <!--v-if-->
        <div class="select-options">
          <div class="select-option -active" role="option" tabindex="0" aria-disabled="false" aria-selected="true">Option 1</div>
          <div class="select-option -active" role="option" tabindex="0" aria-disabled="false" aria-selected="true">Option 2</div>
          <div class="select-option -active" role="option" tabindex="0" aria-disabled="false" aria-selected="true">Option 3</div>
        </div>
      </div>
      <!--v-if-->
    </div>
  </transition-stub>
</div>
`;
